...
  "eventActionEventButton": "Reserve",
  "eventActionCampaignValidated": "I voted!",
  "eventActionEventValidated": "I'm coming!",
  "moduleCentralassociation": "Centralassociation",
  "moduleCentralassociationDescription": "Aggregator of association links",
  "adminAccountTypes": "Account types",
  "adminAdd": "Add",
  "adminAddAssociation": "Add association",
  "adminAddedGroup": "Group created",
  "adminAddedLoaner": "Lender added",
  "adminAddedMember": "Member added",
  "adminAddedSchool": "School created",
  "adminAddedStructure": "Structure added",
  "adminAddGroup": "Add group",
  "adminAddingError": "Error while adding",
  "adminAddingMember": "Adding a member",
  "adminAddLoaningGroup": "Add loaning group",
  "adminAddMember": "Add member",
  "adminAddSchool": "Add school",
  "adminAddStructure": "Add structure",
  "adminAdmin": "Admin",
  "adminAdministration": "Administration",
  "adminAssociationCreated": "Association created",
  "adminAssociationCreationError": "Error while creating association",
  "adminAssociationMembership": "Membership",
  "adminAssociationMembershipName": "Membership name",
  "adminAssociationMembershipsManagement": "Association memberships management",
  "adminAssociationName": "Association name",
  "adminAssociations": "Associations",
  "adminAssociationsMemberships": "Memberships",
  "adminAssociationUpdated": "Association updated",
  "adminAssociationUpdateError": "Error while updating association",
  "adminBankAccountHolder": "Bank account holder: {bankAccountHolder}",
  "@adminBankAccountHolder": {
...
      "bankAccountHolder": {
        "type": "String"
      }
    }
  },
  "adminBankAccountHolderModified": "Bank account holder modified",
  "adminBankDetails": "Bank details",
  "adminBic": "BIC",
  "adminBicError": "BIC must be 11 characters",
  "adminChooseAssociationManagerGroup": "Choose a group to manage this association",
  "adminChooseGroup": "Choose a group",
  "adminChooseGroupManager": "Choose a group to manage this membership",
  "adminCity": "City",
  "adminClearFilters": "Clear filters",
  "adminContent": "Content",
  "adminCountry": "Country",
...
      }
    }
  },
  "adminEditedStructure": "Structure edited",
  "adminEditGroup": "Edit group",
  "adminEditMembership": "Edit membership",
  "adminEditStructure": "Edit structure",
  "adminEmailFailed": "Unable to send email to the following addresses",
  "adminEmailRegex": "Email Regex",
  "adminEmptyDate": "Empty date",
  "adminEmptyFieldError": "Name cannot be empty",
  "adminEmptyUser": "Empty user",
  "adminEndDate": "End date",
  "adminEndDateMaximal": "Maximum end date",
  "adminEndDateMinimal": "Minimum end date",
  "adminError": "Error",
  "adminFailedToDeleteGroup": "Failed to delete group",
  "adminFailedToInviteUsers": "Failed to invite users",
  "adminFailedToSendNotification": "Failed to send notification",
...
  },
  "adminLoaningGroup": "Loaning group",
  "adminLooking": "Searching",
  "adminManageAssociations": "Manage associations",
  "adminManageMembers": "Manage members",
  "adminManagePaiementStructures": "Manage payment structures",
  "adminManager": "Structure administrator",
  "adminManagerGroup": "Manager group : {groupName}",
  "@adminManagerGroup": {
    "description": "Manager group",
    "placeholders": {
      "groupName": {
        "type": "String"
...
  "adminMemberships": "Memberships",
  "adminMembershipUpdatingError": "Error while updating (likely due to overlapping dates)",
  "adminMinimum": "Minimum",
  "adminModifyPermissions": "Modify permissions",
  "adminName": "Name",
  "adminNoGroup": "No group",
  "adminNoManager": "No manager selected",
  "adminNoMember": "No member",
  "adminNoMembership": "No membership",
  "adminNoMoreLoaner": "No lender available",
  "adminNoSchool": "No school",
  "adminNotificationSent": "Notification sent",
  "adminNotifyGroup": "Send a notification",
...
      "user": {
        "type": "String"
      }
    }
  },
  "adminSelectGroupAssociationManager": "Select a group to manage this association",
  "adminSelectManager": "Select a manager",
  "adminSend": "Send",
  "adminSendNotificationToGroup": "Send notification to group",
  "adminShortId": "Short ID (3 letters)",
  "adminShortIdError": "Short ID must be 3 characters",
  "adminSiegeAddress": "Head office address",
  "adminSiret": "SIRET",
  "adminSiretError": "SIRET must be 14 digits",
  "adminStartDate": "Start date",
  "adminStartDateMaximal": "Maximum start date",
  "adminStartDateMinimal": "Minimum start date",
  "adminStreet": "Street and number",
  "adminStructures": "Structures",
  "adminTitle": "Title",
  "adminTooHeavyLogo": "Logo too heavy, maximum size is 4MB",
  "adminUndefinedBankAccountHolder": "Bank account holder not defined",
  "adminUpdatedAssociationLogo": "Association logo updated",
  "adminUpdatedAssociationMembership": "Membership updated",
  "adminUpdatedGroup": "Group updated",
  "adminUpdatedMembership": "Membership updated",
  "adminUpdatingError": "Error while updating",
  "adminUser": "User",
  "adminUsersAndGroups": "Users and groups",
  "adminUsersManagement": "Users management",
  "adminUsersManagementDescription": "Manage users, groups, and associations",
  "adminValidateFilters": "Apply filters",
  "adminVisibilities": "Visibilities",
  "adminZipcode": "Zip code",
...
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
  "amapDeleteDelivery": "Delete delivery?",
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
...
